[20191206] Add Data Matrix Relation Function

--- a/lsa/build.gradle
+++ b/lsa/build.gradle
@@ -1,6 +1,4 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    implementation group: 'gov.nist.math', name: 'jama', version: '1.0.3'
 }
