--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,12 @@ subprojects {
     }
 
     dependencies {
+        implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
+        testImplementation('org.springframework.boot:spring-boot-starter-test') {
+            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+        }
     }
 }
 
